--- a/schemalens/apps/api/pyproject.toml
+++ b/schemalens/apps/api/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=69", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "api"
 version = "0.1.0"
@@ -6,4 +10,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.129.0",
+    "psycopg[binary]>=3.3.2",
+    "uvicorn[standard]>=0.34.0",
 ]
