--- a/schemalens/apps/web/package.json
+++ b/schemalens/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@xyflow/react": "^12.10.0",
+    "dagre": "^0.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
